Carousel and table scaling added. Image blocks started

--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,39 @@ height: 200px;
 .modal-content p{
     margin: 10px;
 }
+
+#middle-images{
+    width: 100%;
+    height: 300px; 
+    background: red;
+}
+
+#middle-images > #left-image{
+    float: left;
+    margin-left: 2.5%;
+    height: 100%;
+    width: 30%;
+    background: green;
+}
+
+#middle-images > #middle-image{
+    float: left;
+    margin-left: 2.5%;
+    height: 100%;
+    width: 30%;
+    background: green;
+}
+
+#middle-images > #right-image{
+    float: left;
+    margin-left: 2.5%;
+    height: 100%;
+    width: 30%;
+    background: green;
+}
+@media only screen 
+and (max-width : 767px) {
+    #table-container{
+      width: 100%;
+    }
+}
