--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,25 @@ and open the template in the editor.
     Author     : Tatu
 */
 
+body{
+    background-image: url("../img/bg.png");
+}
+
+#main{
+    background:  khaki;
+}
+.container{
+    background: white;
+}
 #table-container{
     width: 28%;
 }
 
 .carousel-inner > .item > img, 
 .carousel-inner > .item > a > img{
-width: 100%; /* use this, or not */
-margin: auto;
-height: 200px;
+    width: 100%; /* use this, or not */
+    margin: auto;
+    height: 200px;
 }
 
 .carousel-indicators{
@@ -43,38 +53,82 @@ height: 200px;
     margin: 10px;
 }
 
-#middle-images{
+#middle-images-wrapper{
     width: 100%;
-    height: 300px; 
-    background: red;
+    height: 500px; 
+    margin-bottom: 100px;
 }
 
-#middle-images > #left-image{
+#middle-images-wrapper > #left-image{
     float: left;
-    margin-left: 2.5%;
+    margin-left: 4%;
     height: 100%;
-    width: 30%;
-    background: green;
+    width: 299px;
+    background-image: url("../img/lumo_auction.png");
+    background-repeat: no-repeat;
 }
 
-#middle-images > #middle-image{
+#middle-images-wrapper > #middle-image{
     float: left;
-    margin-left: 2.5%;
     height: 100%;
-    width: 30%;
-    background: green;
+    margin-left: 4%;
+    width: 299px;
+    background-image: url("../img/lumo_raffle.png");
+    background-repeat: no-repeat;
 }
 
-#middle-images > #right-image{
+#middle-images-wrapper > #right-image{
     float: left;
-    margin-left: 2.5%;
     height: 100%;
-    width: 30%;
-    background: green;
+    margin-left: 4%;
+    width: 299px;
+    background-image: url("../img/lumo_deal.png");
+    background-repeat: no-repeat;
 }
+
+.inner-wrapper{
+    width: 100%;
+    height: 100%;
+}
+
+.inner-wrapper > .top{
+    height: 57%;
+}
+
+.inner-wrapper > .bottom{
+    height: 43%;
+    width: 100%;
+}
+
+.inner-wrapper > .bottom > p{
+    margin: 15px;
+    margin-top: 5px;
+}
+
+.buy-button{
+    margin: 15px;
+    margin-top: 23px;
+}
+
 @media only screen 
 and (max-width : 767px) {
     #table-container{
-      width: 100%;
+        width: 100%;
+    }
+}
+
+@media only screen 
+and (max-width : 1199px) {
+    #middle-images-wrapper > #middle-image{
+        float: none;
+        margin: 0 auto;
+    }
+    #middle-images-wrapper > #right-image{
+        float: none;
+        margin: 0 auto;
+    }
+    #middle-images-wrapper > #left-image{
+        float: none;
+        margin: 0 auto;
     }
 }
